# lyric-video

./: .gitignore  Camera.py  Element.py  ImageElement.py  README.md  Scene.py  TextElement.py  collection_validator.py  draw.py  image_grid.py  images.py  main.py  normalize_cyclic.py  pyproject.toml  subtitle.py  test_collection_validator.py  text_positions.py  video_matplot.py  video_movie.py  video_srt.py
collection_validator/: __init__.py
depreciated/: video.py  video_movie_motion_blur.py
notebooks/: demo.ipynb
src/: Camera.py  Keyframe.py  Scene.py  audio.py  find_files_by_name.py  string_content_check.py
src/collection_validator/: __init__.py
src/depreciated/: video.py
src/elements/: __init__.py  element.py  image_element.py  text_element.py
src/elements/tests/: test_text_element.py
src/movie/: __init__.py  camera.py  clip.py  render.py
src/movie/tests/: test_camera.py
src/subtitle/: __init__.py
tests/: test_collection_validator.py
